# mlflow-project

./: README.md  pyproject.toml
mlruns/0/: meta.yaml
notebooks/: insurance.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/10af260f6dce4e5993bac63c6a1efe33/: meta.yaml
notebooks/mlruns/0/10af260f6dce4e5993bac63c6a1efe33/metrics/: MAE  MAPE  R2  RMSE
notebooks/mlruns/0/10af260f6dce4e5993bac63c6a1efe33/tags/: mlflow.log-model.history  mlflow.runName
notebooks/mlruns/0/1f0cbc23f9d14ef391cc9afd0b3e93cf/: meta.yaml
notebooks/mlruns/0/327a284080944238b576e1e1c447acec/: meta.yaml
notebooks/mlruns/0/4f0fa82943b04636928d49f929046e62/: meta.yaml
notebooks/mlruns/0/5433f16c0a66403baa4825bdaaa223ec/: meta.yaml
notebooks/mlruns/0/779729882cac4c83a6333228d0f06939/: meta.yaml
notebooks/mlruns/0/8b8c8deb78f54450b16c4d44c80f5289/: meta.yaml
notebooks/mlruns/0/9c5631aa4780412b882e557a5bf6e082/: meta.yaml
notebooks/mlruns/0/a20e41984891433082dd878d0370a36e/: meta.yaml
notebooks/mlruns/0/a51ec14fbbc64cc988b0279ac2bec978/: meta.yaml
notebooks/mlruns/0/c2d76edf6dc04f118138fe1873b43b65/: meta.yaml
notebooks/mlruns/0/ead7f7651bb94d37ad15fbaa7dacde3a/: meta.yaml
notebooks/mlruns/0/ebbc7ae7b18c47f1a0a6d29c0328c7b8/: meta.yaml
notebooks/mlruns/models/Dummy/: meta.yaml
notebooks/mlruns/models/GradientBoostingRegressor/: meta.yaml
notebooks/mlruns/models/LassoCV/: meta.yaml
notebooks/mlruns/models/LinearRegression/: meta.yaml
notebooks/mlruns/models/RandomForestRegressor/: meta.yaml
notebooks/mlruns/models/RidgeCV/: meta.yaml
(+110 files in other folders)
