[tool.poetry]
name = "mlflow-project"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "2.1.1"
scikit-learn = "1.2.1"
ipykernel = "6.20.2"
pandas = "1.5.3"
seaborn = "0.12.2"
yellowbrick = "1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
